add responsivness until 768px

--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
 							<img src="./images/revolut.png" alt="revolut logo" />
 						</div>
 						<img
+							class="human"
 							src="./images/edward-cooper.jpg"
 							alt="Edward Cooper"
 							width="310"
