add first version of responsiveness for phones

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 					</h2>
 
 					<div class="companies-content-logos d-flex ai-cent">
-						<img src="./images/specialized.png" alt="specialized logo" />
-						<img src="./images/virgin.png" alt="virgin logo" />
-						<img src="./images/tidal.png" alt="tidal logo" />
-						<img src="./images/revolut.png" alt="revolut logo" />
-						<img src="./images/yelp.png" alt="yelp logo" />
-						<img src="./images/daimler.png" alt="daimler logo" />
+						<img src="./images/specialized.svg" alt="specialized logo" />
+						<img src="./images/virgin.svg" alt="virgin logo" />
+						<img src="./images/tidal.svg" alt="tidal logo" />
+						<img src="./images/revolut.svg" alt="revolut logo" />
+						<img src="./images/yelp.svg" alt="yelp logo" />
+						<img src="./images/daimler.svg" alt="daimler logo" />
 					</div>
 				</div>
 			</section>
@@ -378,7 +378,7 @@
 							<p class="quote-caption black">
 								Edward Cooper, Chief Mobile Officer
 							</p>
-							<img src="./images/revolut.png" alt="revolut logo" />
+							<img src="./images/revolut.svg" alt="revolut logo" />
 						</div>
 						<img
 							class="human"
@@ -400,14 +400,19 @@
 							The most-loved translation management software
 						</h2>
 					</div>
+
 					<div class="translation-content-images d-flex">
 						<img
 							src="./images/software-1.png"
 							alt="first translation management software"
+							width="128px"
+							height="116px"
 						/>
 						<img
 							src="./images/software-2.png"
 							alt="second translation management software"
+							width="150px"
+							height="116px"
 						/>
 					</div>
 				</div>
@@ -463,7 +468,7 @@
 						/>
 						<img
 							class="case-logo"
-							src="./images/specialized.png"
+							src="./images/specialized.svg"
 							alt="specialized logo"
 							width="80"
 							height="32"
